--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.1"
-shuttle-axum = { version = "0.34.1", default-features = false, features = ["axum-0-7"] }
-shuttle-runtime = "0.34.1"
-tokio = "1.34.0"
+axum = "0.7.2"
+shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
+shuttle-runtime = "0.35.2"
+tokio = "1.35.1"
 tracing = "0.1.40"
 serde = { version = "1.0.193", features = ["derive"] }
-ordered-float = "4.1.1"
+ordered-float = "4.2.0"
+
+[dev-dependencies]
+cch23-validator = "22.0.0"
