--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,16 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.2"
+axum-extra = { version = "0.9.0", features = ["cookie"] }
 shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
 shuttle-runtime = "0.35.2"
 tokio = "1.35.1"
 tracing = "0.1.40"
 serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 ordered-float = "4.2.0"
+base64 = "0.21.5"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
 axum-test = "14.0.0"
-serde_json = "1.0.108"
