--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 ordered-float = "4.2.0"
 base64 = "0.21.5"
+reqwest = "0.11.23"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
