--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.2"
+axum = { version = "0.7.2", features = ["multipart"] }
 axum-extra = { version = "0.9.0", features = ["cookie"] }
 shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
 shuttle-runtime = "0.35.2"
@@ -15,6 +15,8 @@ serde_json = "1.0.108"
 ordered-float = "4.2.0"
 base64 = "0.21.5"
 reqwest = "0.11.23"
+tower-http = { version = "0.5.0", features = ["fs"] }
+image = "0.24.7"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
