--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ base64 = "0.21.5"
 reqwest = "0.11.23"
 tower-http = { version = "0.5.0", features = ["fs"] }
 image = "0.24.7"
+ulid = "1.1.0"
+uuid = "1.6.1"
+chrono = "0.4.31"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
