--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ uuid = "1.6.1"
 chrono = "0.4.31"
 shuttle-shared-db = { version = "0.35.2", features = ["postgres-rustls"] }
 sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
+html-escape = "0.2.13"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
