--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7.3", features = ["multipart"] }
+axum = { version = "0.7.3", features = ["multipart", "ws"] }
 axum-extra = { version = "0.9.1", features = ["cookie"] }
 shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
 shuttle-runtime = "0.35.2"
@@ -27,8 +27,11 @@ emojito = "0.3.5"
 digest = "0.11.0-pre.3"
 sha2 = "0.10.8"
 hex = "0.4.3"
+futures = "0.3.30"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
 axum-test = "14.2.2"
 serial_test = "2.0.0"
+tokio-tungstenite = "0.21.0"
+tungstenite = "0.21.0"
