--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ digest = "0.11.0-pre.3"
 sha2 = "0.10.8"
 hex = "0.4.3"
 futures = "0.3.30"
+tar = "0.4.40"
+bytes = "1.5.0"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
