--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ bytes = "1.5.0"
 tempfile = "3.9.0"
 git2 = "0.18.1"
 s2 = "0.0.12"
+rgeo = "0.3.0"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
