--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ tempfile = "3.9.0"
 git2 = "0.18.1"
 s2 = "0.0.12"
 rgeo = "0.3.0"
+reverse_geocoder = "4.0.0"
+iso_country = "0.1.4"
 
 [dev-dependencies]
 cch23-validator = "22.0.0"
