--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,7 @@ bytes = "1.5.0"
 tempfile = "3.9.0"
 git2 = "0.18.1"
 s2 = "0.0.12"
-rgeo = "0.3.0"
-reverse_geocoder = "4.0.0"
+regex = "1.10.2"
 iso_country = "0.1.4"
 
 [dev-dependencies]
