--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ tracing = "0.1.40"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 ordered-float = "4.2.0"
-base64 = "0.21.5"
+base64 = "0.21.6"
 reqwest = "0.11.23"
 tower-http = { version = "0.5.0", features = ["fs"] }
 image = "0.24.7"
@@ -25,7 +25,7 @@ sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] 
 html-escape = "0.2.13"
 emojito = "0.3.5"
 digest = "0.11.0-pre.3"
-sha2 = "0.10.8"
+sha2 = "0.11.0-pre.0"
 hex = "0.4.3"
 futures = "0.3.30"
 tar = "0.4.40"
@@ -39,6 +39,6 @@ pathfinding = "4.8.1"
 [dev-dependencies]
 cch23-validator = "22.0.0"
 axum-test = "14.2.2"
-serial_test = "2.0.0"
+serial_test = "3.0.0"
 tokio-tungstenite = "0.21.0"
 tungstenite = "0.21.0"
