--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           components: clippy
       - uses: Swatinem/rust-cache@v2
-        run: cargo clippy -- -D warnings
+      - run: cargo clippy -- -D warnings
 
   coverage:
     name: Code coverage
