--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,9 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - name: Install db
-        run: ./test_db.sh
+        run: |
+          chmod +x ./test_db.sh
+          ./test_db.sh
       - name: Run the app
         run: |
           curl -sSfL https://www.shuttle.rs/install | bash
